--- a/Tesi SDS/Presentazione escriptorium/Presentazione escriptorium.tex
+++ b/Tesi SDS/Presentazione escriptorium/Presentazione escriptorium.tex
@@ -1,7 +1,7 @@
 \documentclass{beamer}
 \usetheme{boadilla}
 %\useoutertheme{split}
-\title[Writer identification task]{Master Thesis proposal:\\Approaches for writer identification in \\
+\title[Papyri OCR]{Master Thesis proposal:\\Approaches for OCR in \\
 handwritten papyri}
 \author{Lorenzo Sala}
 \date{\today}
@@ -12,6 +12,5 @@ handwritten papyri}
 \end{frame}
 \begin{frame}
 	\frametitle{Introduction to eScriptorium}
-	
 \end{frame}
 \end{document}
