--- a/SI/paccosi.sty
+++ b/SI/paccosi.sty
@@ -79,10 +79,10 @@
 \theoremstyle{remark}
 \newtcbtheorem{rema}{Remark}{
 	enhanced, breakable, sharpish corners,
-	colframe=white, coltitle=SlateBlue2, colbacktitle=SlateBlue2!30,
+	colframe=white, coltitle=SlateBlue3, colbacktitle=SlateBlue3!20,
 	colback=white,
-	interior style={bottom color=SlateBlue1!15!Magenta4!50, top color=white!40!SlateBlue2}, rounded corners,
-		frame style={bottom color=SlateBlue1!30!Magenta4!50,top color=white!40!SlateBlue2},
+	interior style={bottom color=white, top color=white!70!SlateBlue3}, rounded corners,
+		frame style={bottom color=white,top color=white!70!SlateBlue3},
 	separator sign={:},
 	fonttitle=\itshape\bfseries,
 	coltext=black,
@@ -343,8 +343,8 @@
 	%    \pgfsetdash{{1pt}{1pt}}{0pt}% dashing cannot work correctly in all situation this way
 	\pgfusepath{stroke}
 }
-\newcounter{exercise}[subsection]
-\newtcolorbox[use counter=exercise]{exercise}{
+\newcounter{exercisecounter}[subsection]
+\newtcolorbox[use counter=exercisecounter]{exercise}{
 	enhanced standard jigsaw,
 	sharp corners,
 	breakable=false,
@@ -360,7 +360,7 @@
 		]
 		(interior.south east) rectangle (interior.north west);
 	},
-	title={Exercise~\thetcbcounter},
+	title={Exercise~\theexercisecounter},
 	coltitle=Thistle4!50!Purple4,
 	colframe=Thistle4!50!Purple4,
 	coltext=Thistle4!50!Purple4,
@@ -371,7 +371,7 @@
 \newtcolorbox[use counter=homework]{homework}{
 	enhanced standard jigsaw,
 	sharp corners,
-	breakable=false,
+	breakable=true,
 	interior titled code={
 		\path[
 		draw=white,
@@ -402,9 +402,8 @@
 		colback=red!5!white,sharp corners, colframe=red,
 		breakable,
 		fonttitle=\bfseries,
-		interior style={left color=red!70,right color=white!29},
 		halign title=flush center,
-		title={\faExclamationTriangle \; I am losing my grip on reality \faExclamationTriangle}}
+		title={\faExclamationTriangle \; Scary \faExclamationTriangle}}
 		
 	\newtcolorbox{notation}{
 		enhanced jigsaw,
@@ -447,8 +446,8 @@
 									\let\det\sfdet
 									
 									
-									\renewcommand{\labelitemi}{\textcolor{VioletRed4!20!black}{\footnotesize\faArrowAltCircleRight[regular]}}
-									\renewcommand{\labelitemii}{\textcolor{HotPink2!80!Plum4}{\footnotesize\faBullseye}}
+									\renewcommand{\labelitemi}{\textcolor{VioletRed4}{\footnotesize\faArrowAltCircleRight[regular]}}
+									\renewcommand{\labelitemii}{\textcolor{HotPink2!80!Plum4}{\footnotesize\faHandPointRight}}
 									\renewcommand{\labelitemiii}{$\textcolor{SkyBlue4}{\diamond}$}
 									\renewcommand{\labelitemiv}{$\textcolor{SkyBlue4}{\ast}$}
 									
@@ -536,6 +535,8 @@
 \newcommand{\ulX}{\underline{X}}
 \newcommand{\uly}{\underline{y}}
 \newcommand{\ulY}{\underline{Y}}
+\newcommand{\rsampy}{\left(Y_{1},\ldots,Y_{m}\right)}
+\newcommand{\rsampx}{\left(X_{1},\ldots,X_{n}\right)}
 \newcommand{\ubracketthin}[1]{\underbracket[0.3pt]{#1}}
 \newcommand{\claptext}[1]{\mathclap{\text{#1}}}
 \newcommand*\circled[1]{\tikz[baseline=(char.base)]{
@@ -612,6 +613,12 @@
 		\newcommand{\MSE}[1]{\mathsf{MSE}\left(#1\right)}
 		\newcommand{\deriv}[1]{\frac{\dif}{\dif #1}}
 		\newcommand{\dderiv}[1]{\frac{\dif^{2}}{\dif {#1}^{2}}}
+		\newcommand{\dderivm}[1]{\frac{\dif^{2}}{\dif {#1}\dif {#1}^{\trsp}}}
+		\newcommand{\ddderiv}[1]{\frac{\dif^{3}}{\dif {#1}^{3}}}
+		\newcommand{\pderiv}[1]{\frac{\partial}{\partial #1}}
+		\newcommand{\pdderiv}[1]{\frac{\partial^{2}}{\partial {#1}^{2}}}
+		\newcommand{\pdderivm}[1]{\frac{\partial^{2}}{\partial {#1}\partial {#1}^{\trsp}}}
+		\newcommand{\pddderiv}[1]{\frac{\partial^{3}}{\partial{#1}^{3}}}
 		\newcommand{\like}{\mathcal{L}}
 		\newcommand{\distexp}[1]{\sim\mathsf{Exp}\left(#1\right)}
 		\newcommand{\distnorm}[1]{\sim\mathsf{N}\left(#1\right)}\newcommand{\distnormk}[1]{\sim\mathsf{N}_{\mathsf{k}}\left(#1\right)}
